# nintendo-c-sdl-examples

./: README.md  meson.build
.github/workflows/: build.yml  switch.yml
source/: SDL_compat.c  SDL_compat.h  main.c  meson.build
subprojects/: sdl2.wrap  sdl2_mixer.wrap
